# auto_sync

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  plan.md  review.md  system_design.md  tauri.conf.json
.cargo/: config.toml
capabilities/: default.json
conf/: auto_sync.linux.toml  auto_sync.nas.toml  auto_sync.openwrt.toml  auto_sync.procd  auto_sync.service  auto_sync.tiger.toml  auto_sync.toml  auto_sync.windows.toml  auto_sync_web.service  check_sites.ps1  collector.toml  collector_deploy_aws.ps1  collector_deploy_dev.ps1  collector_deploy_nas.ps1  collector_deploy_openwrt.ps1  collector_deploy_test.ps1
docs/: deployment-paths.md
flutter/auto_sync_gui/: .metadata  README.md  pubspec.yaml
flutter/auto_sync_gui/lib/: main.dart  platform_support.dart  platform_support_io.dart  platform_support_stub.dart  platform_support_web.dart
flutter/auto_sync_gui/test/: widget_test.dart
flutter/auto_sync_gui/web/: index.html  manifest.json
flutter/auto_sync_gui/windows/: CMakeLists.txt
flutter/auto_sync_gui/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
scripts/: bootstrap_nas_ubuntu.sh  build_openwrt_aarch64.sh  create_test_vm.ps1  deploy_aws_from_git.sh  deploy_halo2_bundle.sh  deploy_local.sh  deploy_nas.sh  deploy_openwrt.sh  deploy_tiger.sh  deploy_windows.ps1  download_windows_runtime.sh  verify_diff.py
src/: lib.rs
src/core/: backend.rs  cancel.rs  collector.rs  config.rs  logging.rs  machines.rs  mod.rs  peer_notify.rs  progress.rs  scheduler.rs  signal.rs  standby.rs  state.rs  status.rs  storage.rs  web_api.rs
src/core/sync/: delta.rs  mod.rs
src/core/watcher/: fanotify.rs  mod.rs  windows_usn.rs
src/ui/: index.html  main.js  styles.css
tests/: linux_fanotify_sync_e2e.rs  local_http_transfer_e2e.rs  windows_nas_sync_e2e.rs
