[package]
name = "auto_sync"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "auto_sync"
path = "src/bin/auto_sync.rs"

[[bin]]
name = "auto_syncctl"
path = "src/bin/auto_syncctl.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
blake3 = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
filetime = "0.2"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", optional = true, features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = { version = "2", optional = true }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter", "fmt"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }
tauri-build = { version = "2", optional = true }

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-build"]

[profile.release]
lto = "thin"
strip = "symbols"
